--- a/frontend/src/pages/Home.module.css
+++ b/frontend/src/pages/Home.module.css
@@ -1,5 +1,4 @@
 .createPostButton {
-
     font-size: 16px;
     background-color: #ffffff;
     color: rgb(0, 0, 0);
@@ -12,15 +11,16 @@
     margin-top: 25px;
     padding: 0px 5px;
     border-radius: 35px;
-    transition: background-color 0.3s ease; 
+    transition: background-color 0.3s ease;
     cursor: pointer;
     display: flex;
-    align-items: center; 
-    width:115px;
-    height:50px;
+    align-items: center;
+    width: 115px;
+    height: 50px;
 }
-.createPostButton:hover, .createPostButton:focus-within {
-    background-color: #d3d3d3; 
+.createPostButton:hover,
+.createPostButton:focus-within {
+    background-color: #d3d3d3;
 }
 .deletePostButton {
     padding: 10px;
@@ -36,10 +36,10 @@
     background: #ffffff;
     padding: 20px;
     border-radius: 10px;
-    border: 1px solid  #dde8f8;
+    border: 1px solid #dde8f8;
     margin-top: 20px;
     margin-bottom: 50px;
-    box-shadow: 0 0 2px rgba(0, 26, 54, 0.5); 
+    box-shadow: 0 0 2px rgba(0, 26, 54, 0.5);
 }
 
 .inputField {
@@ -49,20 +49,20 @@
     /* border-radius: 5px;
     box-sizing: border-box; */
     font-size: 16px;
-    border: 1px solid #ddd; 
-    border-radius: 20px; 
+    border: 1px solid #ddd;
+    border-radius: 20px;
     outline: none;
-    transition: border-color 0.3s ease, background-color 0.3s ease; 
+    transition: border-color 0.3s ease, background-color 0.3s ease;
 }
 .inputField:hover {
-    border-color: #999; 
+    border-color: #999;
     background-color: rgb(240, 240, 240);
 }
 .inputField:focus {
-    border: 2px solid #a1ceff; 
-    outline: none; 
+    border: 2px solid #a1ceff;
+    outline: none;
     box-shadow: 0 0 5px rgba(0, 76, 158, 0.5);
-  }
+}
 
 .submitButton {
     padding: 10px;
@@ -76,10 +76,10 @@
     padding-bottom: 8px; */
 }
 .submitButton:disabled {
-    background-color: #e2e2e2 !important;  
-    color: #6c757d;  
-    cursor: not-allowed;  
-    border: 1px solid #ccc;  
+    background-color: #e2e2e2 !important;
+    color: #6c757d;
+    cursor: not-allowed;
+    border: 1px solid #ccc;
 }
 
 .closeButton {
@@ -90,11 +90,11 @@
     border: none;
     border-radius: 10px;
     margin-left: 5px;
-    margin-top: 10px; 
+    margin-top: 10px;
     padding-top: 11px;
     padding-bottom: 10px;
-    top:2px;
-    position:relative;
+    top: 2px;
+    position: relative;
     /* padding-right: 8px;
     padding-left: 8px; */
 }
@@ -141,11 +141,10 @@
     background-color: #dbd0d0;
 }
 
-
 /*  */
 .commentFormContainer {
     max-width: 600px;
-    margin-left : 195px;
+    margin-left: 195px;
     margin-bottom: 50px;
 }
 
@@ -161,8 +160,6 @@
     /* position: relative; */
     display: flex;
     flex-direction: column;
-    
-   
 }
 
 .commentInputExpanded {
